# xlee

./: .gitignore
docs/: product-blueprint.md  technical-architecture.md
scripts/: bootstrap.sh  build-au.sh  build-windows-vst3.ps1  package-macos-release.sh
source/SuperBass/: CMakeLists.txt
source/SuperBass/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
